# murdoc

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start.sh  test_api.py
agentvault_gateway/: __init__.py  app.py
assets/: architecture.dot
bifrost_gateway/: __init__.py  runtime.py
docs/: architecture.md  deployment.md  examples.md  guide.md  observability.md  repository.md  security.md  testing.md
examples/: __init__.py
mcp_gateway/: .env.example  .gitignore  README.md  __init__.py  adapter.py  chat_app.py  list_tools.py  mcp_interceptor.py  notion_mcp_client.py  proxy_server.py  security_config.py  start.sh
mcp_gateway/mcp_config/: bifrost_mcp_config.json
murdoc/: __init__.py
murdoc/core/: __init__.py  runtime.py
murdoc/gateway/: __init__.py  app.py
murdoc/mcp/: __init__.py  adapter.py  interceptor.py  proxy_server.py  security_config.py
murdoc/security/: __init__.py  auth.py  config.py  control_plane.py  lakera_guard.py  observability.py  policy_engine.py  presidio_scanner.py  presidio_service.py  semantic_guardrails.py
observability/: README.md  alertmanager.slack-pagerduty.example.yml  alertmanager.yml  docker-compose.yml  loki.yml  otel-collector.yml  prometheus-alerts.yml  prometheus.yml  promtail.yml  tempo.yml
security/: __init__.py  config.py  control_plane.py  lakera_guard.py  observability.py  policy_engine.py  presidio_scanner.py  presidio_service.py  semantic_guardrails.py  test_service.py
testdata/policies/: block_sensitive.rego
tests/python/: test_a2a_lab.py  test_agno_team_lab.py  test_api.py  test_attack_harness.py  test_e2e_lab.py  test_lab_env.py  test_mcp_gateway.py
tests/security/: README.md  TESTING_METHODOLOGY.md  go.mod  integration_test.go  lakera_test.go  opa_test.go  presidio_test.go
tests/tools/: __init__.py  agent_fuzzer.py  attack_corpus.py  attack_lab.py  lab_env.py  system_tools.py
tools/: system_tools.py
ui/: README.md  index.html  package-lock.json  package.json  server.py  styles.css
ui/src/: App.css  App.jsx  index.css
(+65 files in other folders)
