[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murdoc"
version = "0.1.0"
description = "Self-hosted AI security gateway for LLM, HTTP tool, and MCP traffic."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Murdoc Maintainers" },
]
keywords = ["ai", "security", "gateway", "agents", "mcp", "guardrails"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "anyio>=4.0.0",
  "fastapi>=0.100.0",
  "httpx>=0.27.0",
  "mcp>=1.1.0",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-exporter-otlp>=1.30.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-sdk>=1.30.0",
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "prometheus-client>=0.20.0",
  "PyJWT[crypto]>=2.8.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "rapidfuzz>=3.0.0",
  "spacy>=3.5.0",
  "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
nemo = [
  "nemoguardrails>=0.21.0",
]
lab = [
  "agno>=0.1.0",
  "cisco-ai-a2a-scanner>=1.0.1",
  "flask>=3.0.0",
  "google-api-python-client>=2.0.0",
  "google-auth-oauthlib>=1.0.0",
  "requests>=2.28.0",
  "yara-python>=4.5.4",
]
examples = [
  "openai>=1.30.0",
]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/murdoc-ai/murdoc"
Documentation = "https://github.com/murdoc-ai/murdoc#readme"
Issues = "https://github.com/murdoc-ai/murdoc/issues"

[project.scripts]
murdoc-gateway = "murdoc.gateway.app:main"
murdoc-mcp-proxy = "murdoc.mcp.proxy_server:main"

[tool.setuptools.packages.find]
include = ["murdoc*"]
